2008-02-16  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit adds support for most of the user-particular data feeds
	Audioscrobbler offers into Lastfm.dll, our Banshee-independent Lastfm
	library.

	* src/Libraries/Lastfm/Lastfm.Data/LastfmDataCollection.cs:
	* src/Libraries/Lastfm/Lastfm.Data/UserTopTracks.cs:
	* src/Libraries/Lastfm/Lastfm.Data/UserTopArtists.cs:
	* src/Libraries/Lastfm/Lastfm.Data/UserTopData.cs:
	* src/Libraries/Lastfm/Lastfm.Data/Profile.cs:
	* src/Libraries/Lastfm/Lastfm.Data/UserTopAlbums.cs: Removed files.

	* src/Libraries/Lastfm/Test.cs:
	* src/Libraries/Lastfm.Gui/Test.cs: Moved test to Lastfm.Gui.

	* src/Libraries/Lastfm/Lastfm.Data/DataCore.cs: New static class for doing
	initialization and settings.

	* src/Libraries/Lastfm/Lastfm.Data/DataEntryCollection.cs: New class that
	wraps a XmlNodeList.

	* src/Libraries/Lastfm/Makefile.am: Updates, add make test rule.

	* src/Libraries/Lastfm/Lastfm.Data/DataEntry.cs: Move all DataEntry
	subclasses here.  There are too many to have in separate classes (and the
	header/code ratio is really high).

	* src/Libraries/Lastfm/Lastfm.Data/UserData.cs: Wrap almost all of the
	Last.fm data feeds that pertain to a particular user.

	* src/Libraries/Lastfm/Lastfm.Data/LastfmData.cs: Update for DataCore
	changes, and instantiate and wrap a DataEntryCollection.

2008-02-16  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	Set RowSensitivePropertyName to 'CanPlay'

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Model.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Added a RowSensitivePropertyName property, defaulting to 'Sensitive'; 
	objects in the model will be queried for this property to indicate whether
	the object is sensitive (enabled) or not; render the row's sensitivity
