@@ -1,5 +1,11 @@
 2008-02-16  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm: Move Banshee.Lastfm to
+	Banshee.Lastfm.Radio in preparation for merging the Audioscrobbler and
+	Recommendations plugins.
+
+2008-02-16  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	This commit adds support for most of the user-particular data feeds
 	Audioscrobbler offers into Lastfm.dll, our Banshee-independent Lastfm
 	library.
